static/worktime/css/main.css
.javascript-only {
  display: none;
}

.shrink-wrap {
  display: inline-block;
  width: auto;
}

.popup {
  position: absolute;
  display: inline-block;
  border-radius: 3px;
  padding: 5px 8px 5px 8px;
  color: white;
  background-color: #444;
}

#warning {
  min-width: 400px;
  margin-left: calc(50% - 200px);
  margin-right: calc(50% - 200px);
}

#main-display {
  max-width: 800px;
}

@media (min-width: 840px) {
  #main-display {
    margin-left: calc(50% - 400px);
    margin-right: calc(50% - 400px);
  }
}

#connection-info {
  margin-right: 10px;
}

#loading {
  display: none;
  width: 40px;
  position: absolute;
  margin-top: 10px;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
}

.worktime-section {
  padding: 10px 20px 20px 20px;
}

/* When the screen is too small, stop the floats and go to one vertical column. */
@media (max-width: 590px) {
  .abbrev .column {
    float: none !important;
  }
}
/* When we're not abbreviating mode names, do this earlier. */
@media (max-width: 720px) {
  .noabbrev .column {
    float: none !important;
  }
}

#connection-status {
  padding: 5px 10px;
  border-radius: 5px;
  text-align: right;
}

#connection-warning {
  padding: 5px 10px;
  border-radius: 5px;
  background-color: #fcc;
  display: none;
}

#adjustments-bar {
  position: relative;
  height: 30px;
}

#adjustment-lines-bar {
  position: relative;
  height: 15px;
}

.adjustment {
  position: absolute;
  border-radius: 3px;
  padding: 5px 8px 5px 8px;
  font-size: 90%;
}

.adjustment.color-null, .adjustment.color-None, .adjustment.color-undefined, .adjustment.color- {
  padding: 4px 7px 4px 7px;
  border: solid 1px #ccc;
}

.adjustment-line {
  position: absolute;
  border: solid 1px #ccc;
  height: 15px;
}

#history-bar .popup {
  display: none;
  top: -2px;
}

#history .period {
  height: 10px;
  display: inline-block;
}

#history .period {
  border-top: 1px #ccc solid;
  border-bottom: 1px #ccc solid;
}
#history .period[data-index="0"] {
  border-left: 1px #ccc solid;
}
#history .period:last-child {
  border-right: 1px #ccc solid;
}

#history .period.color-green {
  background-color: #afa;
}
#history .period.color-red {
  background-color: #faa;
}
#history .period.color-bluegray {
  background-color: #ddf;
}

.color-green {
  background-color: #cfc;
}
.color-red {
  background-color: #fcc;
}
.color-bluegray {
  background-color: #ddf;
}
.color-undefined, .color-None, .color-null, .color- {
  background-color: unset;
}

#mode-time {
  margin-left: 5px;
  padding: 5px 10px 6px 5px;
  border-radius: 4px;
}

#status {
  /* Kludge to get around cutting off current mode display on Chrome. */
  width: 110%;
}

#current-mode {
  margin-left: 5px;
  margin-right: 5px;
}

#totals th.name {
  text-align: center;
}

#totals td {
  width: 4em;
  padding-left: 12px;
  padding-right: 12px;
}

#totals td.value {
  text-align: right;
}

.worktime-section form {
  border: 1px solid #ddd;
  padding: 15px;
}

#actions .btn, #settings .btn {
  margin-bottom: 0;
}

#actions .btn.last {
  margin-right: 0;
}

.btn[name="mode"] {
  min-width: 37px;
}

#adjust-mode .btn {
  margin-bottom: 10px;
  margin-right: 0;
}

#adjust-mode {
  padding-left: 10px;
}

#switch-era {
  padding: 15px;
  border-bottom: none;
}

.button-group {
  display: inline-block;
}

p.setting {
  padding-top: 5px;
  padding-bottom: 5px;
  margin-bottom: 0;
}

#adjust {
  height: 200px;
}

#adjust-delta p {
  padding-top: 15px;
  padding-bottom: 15px;
}

#adjust-delta .verb {
  width: 4.3em;
  display: inline-block;
  text-align: right;
}

#adjust-delta input {
  width: 2.8em;
  margin-left: 2px;
  margin-right: 2px;
  padding-left: 0;
  padding-right: 0;
}

#adjust-delta .preposition {
  width: 2.2em;
  display: inline-block;
  text-align: center;
}

#adjust-mode button {
  display: block;
  margin-right: 10px;
}

form#clear {
  border-top: none;
  margin: 0;
  text-align: center;
}

#clear button {
  margin: 15px;
}

